fixes for post method in package-controller
